Add wordage change for index

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     <div class="container">
         <header>
             <h1>The Mini</h1>
-            <p class="subtitle">Valentine's Edition</p>
+            <p class="subtitle">Jona's Edition</p>
         </header>
 
         <div class="game-container">
@@ -410,7 +410,7 @@
                     { number: 6, clue: 'you are fine and you are _____ ', answer: 'MINE', row: 7, col: 0 }
                 ],
                 down: [
-                    { number: 2, clue: 'the feeling that had earlier today', answer: 'ILOVE', row: 0, col: 1 },
+                    { number: 2, clue: 'the feeling you had earlier today', answer: 'ILOVE', row: 0, col: 1 },
                 ]
             }
         };
